2005-05-10  Owen Taylor  <otaylor@redhat.com>

	* src/cairo.c src/cairo-path-data.c src/cairo-path-data-private.h:
	Pass the gstate to _cairo_path_data_create[_flat] and use
	_cairo_gstate_backend_to_user() so as to properly handle
	the surface device offset.

2005-05-10  Carl Worth  <cworth@cworth.org>

	* src/cairo-arc.c (_cairo_arc_path_negative): Don't use return
	when calling a void function (thanks to Damien Carbery
	<damien.carbery@sun.com>). Closes bug #3134.

2005-05-10  Carl Worth  <cworth@cworth.org>

	* test/cairo-test.c:
	* test/cairo-test.h: Removing mucking around with stderr and add a
	cairo_test_log function instead.
	
	* test/buffer-diff.c:
	* test/create-for-png.c:
	* test/pdf-surface.c:
	* test/read-png.c:
	* test/trap-clip.c:
	* test/xmalloc.c: Switch all error messages from
	fprintf(stderr,...) to cairo_test_log(...).

2005-05-10  Carl Worth  <cworth@cworth.org>

	* configure.in: Fix URLs for glitz and xlibs, (thanks to Jason
	Dorje Short <jdorje@users.sf.net>).

2005-05-10  Carl Worth  <cworth@cworth.org>

	* configure.in: Update to current canonical URL for XCB.

2005-05-10  Carl Worth  <cworth@cworth.org>

	* src/cairo-wideint.h: Don't guess and make our own definitions
	for uint8_t, etc. Just error out if we can't find a suitable
	header file.

	* src/cairo-png.c: (unpremultiply_data), (premultiply_data):
	* test/read-png.c: (premultiply_data): Fix to use fixed-size type
	so that this code works when sizeof(unsigned long) != 32. Thanks
	to Manish Singh.

2005-05-10  Carl Worth  <cworth@cworth.org>

	* src/cairo-gstate.c: (_cairo_gstate_get_font_matrix):
	* src/cairo.c: (cairo_get_font_matrix):
	* src/cairo.h:
	* src/cairoint.h: Fix cairo_get_font_matrix to actually use its
	out-parameter. And change the return type to void.

2005-05-09  Owen Taylor  <otaylor@redhat.com>

	* src/cairo-ft-font.c (_cairo_ft_unscaled_font_create_glyph): 
	Get the glyphslot point *after* we get the FT_Face. (Robert O'Callahan)
