@@ -66,7 +66,6 @@ cairo_xcb_surface_create
 <SECTION>
 <FILE>cairo-xlib</FILE>
 <TITLE>XLib Backend</TITLE>
-cairo_xlib_surface_create
 cairo_xlib_surface_create_for_pixmap
 cairo_xlib_surface_create_for_pixmap_with_visual
 cairo_xlib_surface_create_for_window_with_visual
